update mutex cpa with optional/strict mutex handle checking (revert unsound changes)